template-ingress.yml
---
apiVersion: {INGRESS_API_VERSION}
kind: Ingress
metadata:
  name: {ING_NAME}
  namespace: {NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false" 
spec:
  tls:
  - hosts:
    - {HOSTNAME}
    secretName: {SECRET_NAME}
  rules:
  - host: {HOSTNAME}
    http:
      paths:
      - path: /.well-known/acme-challenge/
        backend:
          serviceName: certbot
          servicePort: 80
      - path: /
        backend:
          serviceName: nginx-redirect-to-js
          servicePort: 80
